[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "misp-modules-cli"
version = "0.1.0"
description = "CLI client for querying MISP expansion modules"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "misp-modules-cli contributors" }
]
dependencies = [
  "requests>=2.31.0"
]

[project.urls]
Homepage = "https://github.com/MISP/misp-modules"

[project.scripts]
misp-modules-cli = "bin.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["bin"]
